feat: ajustes crear proceso
