# app/Http/Controllers/StatusController.php
@@ -2,16 +2,62 @@
 
 namespace App\Http\Controllers;
 
+use App\Services\StatusService;
+use App\Utils\ResponseBuilder;
 use Illuminate\Http\Request;
 
-
+/**
+ * @OA\Tag(
+ *     name="Status",
+ *     description="Estado para los procesos."
+ * )
+ */
 class StatusController extends Controller
 {
 
+    protected $statusService;
+    protected $response;
 
+
+    public function __construct(StatusService $statusService, ResponseBuilder $response)
+    {
+        $this->officeService = $statusService;
+        $this->response = $response;
+    }
+
+    /**
+     * @OA\Get(
+     *     tags={"Status"},
+     *     path="/api/status",
+     *     summary="Get all Status",
+     *     @OA\Parameter(
+     *         name="x-token",
+     *         in="header",
+     *         description="Key API",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *      ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Get account user information"
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="An error has occurred."
+     *     )
+     * )
+     */
     public function index()
     {
-        //
+        try {
+            $result = $this->statusService->all();
+            return $this->response->data($result)->build();
+        } catch (\Throwable $th) {
+            $message = $th->getMessage() . ' - ' . $th->getLine();
+            return $this->response->status(500)->message($message)->success(false)->build();
+        }
     }
 
     /**
