# routes/api.php
@@ -1,8 +1,10 @@
 <?php
 
 use App\Http\Controllers\ActionController;
+use App\Http\Controllers\CityController;
 use App\Http\Controllers\ClassController;
 use App\Http\Controllers\OfficeController;
+use App\Http\Controllers\ParameterController;
 use App\Http\Controllers\PersonController;
 use App\Http\Controllers\PossibilityFailureController;
 use App\Http\Controllers\ProcessController;
@@ -24,5 +26,6 @@ Route::resource('possibility_failure', PossibilityFailureController::class);
 Route::resource('office', OfficeController::class);
 Route::resource('person', PersonController::class);
 Route::resource('legal-process', ProcessController::class);
-
+Route::resource('common', ParameterController::class);
+Route::resource('city', CityController::class);
 
